# flexworld

./: .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/data/gui/: menu.theme
client/local/gui/: basic.rcss  chat.rml  chat_prompt.rml  chat_window.rml  container.rml  desk_toolbar.rml  forms.rcss  game.theme  journal.rml  main_menu.rml  menu.rcss  menu.theme  options.rcss  options.rml
client/src/: BindingDataSource.cpp  BindingDataSource.hpp  BufferObject.cpp  BufferObject.hpp  BufferObjectGroup.cpp  BufferObjectGroup.hpp  Camera.cpp  Camera.hpp  CameraReader.cpp  CameraReader.hpp  ChatController.cpp  ChatController.hpp  ChatWindow.cpp  ChatWindow.hpp  ChatWindowController.cpp  ChatWindowController.hpp  ChunkPreparerReader.cpp  ChunkPreparerReader.hpp  ClassDrawable.cpp  ClassDrawable.hpp  Client.cpp  Client.hpp  ColorMorpher.cpp  ColorMorpher.hpp  ColorPicker.cpp  ColorPicker.hpp  ComponentSystemReader.cpp  ComponentSystemReader.hpp  ConnectState.cpp  ConnectState.hpp  Console.cpp  Console.hpp  Container.cpp  Container.hpp  ContainerController.cpp  ContainerController.hpp  ContainerManager.cpp  ContainerManager.hpp  Controls.cpp  Controls.hpp  (+70 more)
client/test/: CMakeLists.txt
client/test/src/: Test.cpp  TestChunkPreparerReader.cpp
cmake/: FindAssimp.cmake  FindLua51.cmake  FindlibRocket.cmake  Findlibnoise.cmake  Findyaml-cpp.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  assets_copyright.txt
doc/diagrams/: gamehost.dia
doc/fw-test/: guide.latex
extlibs/Diluculum/: CMakeLists.txt
extlibs/Diluculum/Sources/: InternalUtils.cpp
extlibs/Diluculum/include/Diluculum/: LuaExceptions.hpp  LuaWrappers.hpp
extlibs/libRocket/Include/Rocket/Core/: Font.h  Property.h  StringBase.h  StringBase.inl  TypeConverter.inl  Variant.inl  Vector2.inl
extlibs/libRocket/Source/Controls/: DataQuery.cpp
extlibs/libRocket/Source/Core/: DecoratorTiled.cpp  ElementHandle.cpp  ElementUtilities.cpp  String.cpp  XMLNodeHandlerBody.cpp
fwlib/: CMakeLists.txt
fwlib/include/FlexWorld/: Class.hpp  Texture.hpp
fwlib/src/FlexWorld/: Class.cpp  ClassDriver.cpp  Config.cpp  Texture.cpp
lib/: CMakeLists.txt
lib/include/FlexWorld/: Account.hpp  AccountDriver.hpp  AccountManager.hpp  Chunk.hpp  Class.hpp  ClassCache.hpp  ClassDriver.hpp  ClassLoader.hpp  Client.hpp  Client.inl  Config.hpp  Config.hpp.in  Cuboid.hpp  Cuboid.inl  Entity.hpp  Exception.hpp  Face.hpp  Facing.hpp  FlexID.hpp  FlexId.hpp  GameMode.hpp  GameModeDriver.hpp  LockFacility.hpp  Log.hpp  Log.inl  LooseOctree.hpp  LooseOctree.inl  Math.hpp  Math.inl  Mesh.hpp  Message.hpp  MessageHandler.hpp  MessageHandler.inl  MessageMeta.hpp  Model.hpp  ModelDriver.hpp  Networking.hpp  NonCopyable.hpp  PackageEnumerator.hpp  Peer.hpp  (+25 more)
lib/include/FlexWorld/Controllers/: EntityWatchdog.hpp
lib/include/FlexWorld/LuaModules/: Event.hpp  Server.hpp  ServerGate.hpp  Test.hpp  World.hpp  WorldGate.hpp
lib/include/FlexWorld/Messages/: AttachEntity.hpp  Beam.hpp  BlockAction.hpp  Chat.hpp  Chunk.hpp  ChunkUnchanged.hpp  CreateEntity.hpp  DestroyBlock.hpp  Login.hpp  LoginOK.hpp  OpenContainer.hpp  OpenLogin.hpp  Ready.hpp  RequestChunk.hpp  ServerInfo.hpp  SetBlock.hpp  Use.hpp
lib/src/FlexWorld/: Account.cpp  AccountDriver.cpp  AccountManager.cpp  Chunk.cpp  Class.cpp  ClassCache.cpp  ClassDriver.cpp  ClassLoader.cpp  Client.cpp  Config.cpp  Entity.cpp  FlexID.cpp  FlexId.cpp  GameMode.cpp  GameModeDriver.cpp  LockFacility.cpp  Log.cpp  Math.cpp  Mesh.cpp  Message.cpp  MessageMeta.cpp  Model.cpp  ModelDriver.cpp  Networking.cpp  NonCopyable.cpp  PackageEnumerator.cpp  Peer.cpp  Planet.cpp  PlayerInfo.cpp  Protocol.cpp  RefLock.cpp  Resource.cpp  ResourceId.cpp  SHA1.cpp  SaveInfo.cpp  SaveInfoDriver.cpp  ScriptManager.cpp  Selector.cpp  Server.cpp  ServerProtocol.cpp  (+7 more)
lib/src/FlexWorld/Controllers/: EntityWatchdog.cpp
lib/src/FlexWorld/LuaModules/: Event.cpp  Server.cpp  ServerGate.cpp  Test.cpp  World.cpp  WorldGate.cpp
lib/src/FlexWorld/Messages/: AttachEntity.cpp  Beam.cpp  BlockAction.cpp  Chat.cpp  Chunk.cpp  ChunkUnchanged.cpp  CreateEntity.cpp  DestroyBlock.cpp  Login.cpp  LoginOK.cpp  OpenContainer.cpp  OpenLogin.cpp  Ready.cpp  RequestChunk.cpp  ServerInfo.cpp  SetBlock.cpp  Use.cpp
modes/: CMakeLists.txt
modes/sandbox/modes/: sandbox.yml
modes/tutorial/modes/: tutorial.yml
server/: CMakeLists.txt
test/: CMakeLists.txt  Config.hpp.in  ExampleServerGate.cpp  ExampleServerGate.hpp  ExampleWorldGate.cpp  ExampleWorldGate.hpp  ExceptionChecker.hpp  LuaUtils.cpp  LuaUtils.hpp  Test.cpp  TestAccount.cpp  TestAccountDriver.cpp  TestAccountManager.cpp  TestChunk.cpp  TestClass.cpp  TestClassCache.cpp  TestClassDriver.cpp  TestClassLoader.cpp  TestClient.cpp  TestCuboid.cpp  TestEntity.cpp  TestEntityWatchdogController.cpp  TestEventLuaModule.cpp  TestFlexID.cpp  TestGameMode.cpp  TestGameModeDriver.cpp  TestLockFacility.cpp  TestLooseOctree.cpp  TestMath.cpp  TestMesh.cpp  TestMessage.cpp  TestMessageMeta.cpp  TestModel.cpp  TestModelDriver.cpp  TestNetworking.cpp  TestPackageEnumerator.cpp  TestPeer.cpp  TestPlanet.cpp  TestRefLock.cpp  TestResource.cpp  (+17 more)
test/data/accounts/: Tank.yml
test/data/modes/: tutorial.yml
test/data/more_packages/test/: green.yml  invalid_model.yml  invalid_texture.yml
test/data/saves/test/: info.yml
test/data/saves/test/accounts/: John.yml  Tank.yml
test/data/scripts/: block_action.lua  chat.lua  class_events.lua  commands.lua  connect.lua  invalid.lua
tools/convert2fwm/: CMakeLists.txt
tools/convert2fwm/src/: Convert2FWM.cpp
